# cupbr

./: .gitmodules  CMakeLists.txt  Default.ini  README.md  build.sh
lib/include/: CUPBR.cuh  CUPBR.h
lib/include/Core/: CUDA.cuh  CUDA.h  CUPBRAPI.h  EntryPoint.h  Event.h  KernelHelper.cuh  KernelHelper.h  KeyCodes.h  KeyEvent.h  Memory.cuh  Memory.h  MouseEvent.h  Platform.h  Plugin.h  Properties.h  Tracing.cuh  Tracing.h  WindowEvent.h
lib/include/DataStructure/: BoundingVolumeHierarchy.h  Camera.cuh  Camera.h  FileWatcher.h  Image.cuh  Image.h  Light.cuh  Light.h  RenderBuffer.cuh  RenderBuffer.h  Volume.h
lib/include/GL/: GLRenderer.cuh  GLRenderer.h  Window.h
lib/include/Geometry/: AABB.h  Geometry.cuh  Geometry.h  Material.cuh  Material.h  MaterialGGX.h  MaterialGlass.h  MaterialLambert.h  MaterialMirror.h  MaterialPhong.h  Mesh.cuh  Mesh.h  Plane.cuh  Plane.h  Quad.cuh  Quad.h  Ray.cuh  Ray.h  Sphere.cuh  Sphere.h  Triangle.cuh  Triangle.h
lib/include/Interaction/: Interactor.cuh  Interactor.h  MousePicker.cuh  MousePicker.h
lib/include/Math/: Functions.cuh  Functions.h  Matrix.h  MatrixFunctions.h  MatrixOperations.h  MatrixTypes.h  MatrixTypes_fwd.h  Vector.h  VectorFunctions.h  VectorOperations.h  VectorTypes.h  VectorTypes_fwd.h
lib/include/Models/: LenGen.h  PathGen.h  ScatGen.h
lib/include/PostProcessing/: Convolution.cuh  Convolution.h  PostProcessor.h  PyramidConstructor.h
lib/include/Renderer/: GradientDomain.cuh  GradientDomain.h  PBRenderer.cuh  PBRenderer.h  PathTracer.cuh  PathTracer.h  RayTracer.cuh  RayTracer.h  RenderMethod.h  SphereTracer.h  ToneMapper.cuh  ToneMapper.h  ToneMappingMethod.h  VolumeRenderer.cuh  VolumeRenderer.h  Whitted.cuh  Whitted.h
lib/include/Scene/: ObjLoader.cuh  ObjLoader.h  SDF.h  Scene.cuh  Scene.h  SceneLoader.cuh  SceneLoader.h
lib/src/Core/: KernelHelper.cu  KernelHelperDetail.cuh  KernelHelperDetail.h  Memory.cu  MemoryDetail.cuh  MemoryDetail.h  Plugin.cpp  PropertiesDetail.h  TracingDetail.cuh  TracingDetail.h
lib/src/DataStructure/: BoundingVolumeHierarchy.cpp  BoundingVolumeHierarchyDetail.h  Camera.cpp  Camera.cu  CameraDetail.cuh  CameraDetail.h  FileWatcher.cpp  ImageDetail.cuh  ImageDetail.h  LightDetail.cuh  LightDetail.h
lib/src/GL/: GLRenderer.cpp  GLRenderer.cu  Window.cpp
lib/src/Geometry/: AABBDetail.h  Geometry.cu  GeometryDetail.cuh  GeometryDetail.h  MaterialDetail.cuh  MaterialDetail.h  MaterialGGXDetail.h  MaterialGlassDetail.h  MaterialLambertDetail.h  MaterialMirrorDetail.h  MaterialPhongDetail.h  Mesh.cu  MeshDetail.cuh  MeshDetail.h  Plane.cu  PlaneDetail.cuh  PlaneDetail.h  Quad.cu  QuadDetail.cuh  QuadDetail.h  RayDetail.cuh  RayDetail.h  Sphere.cu  SphereDetail.cuh  SphereDetail.h  Triangle.cu  TriangleDetail.cuh  TriangleDetail.h
lib/src/Interaction/: Interactor.cpp  Interactor.cu  MousePicker.cu
lib/src/Math/: FunctionsDetail.cuh  FunctionsDetail.h  MatrixFunctionsDetail.h  MatrixOperationsDetail.h  MatrixTypesDetail.h  VectorFunctionsDetail.h  VectorOperationsDetail.h  VectorTypesDetail.h
lib/src/PostProcessing/: Convolution.cu  PostProcessor.cpp  PyramidConstructor.cu
lib/src/Renderer/: GradientDomain.cu  PBRenderer.cu  PathTracer.cu  RayTracer.cu  SphereTracer.cu  ToneMapper.cu  VolumeRenderer.cu  Whitted.cu
lib/src/Scene/: ObjLoader.cpp  ObjLoader.cu  SceneDetail.cuh  SceneDetail.h  SceneLoader.cpp  SceneLoader.cu
res/Scenes/: CVAETest.xml  CornellBoxSphere.xml  CornellBoxSphereAreaLight.xml  CornellBoxSphereGDPT.xml  CornellBoxSphereGGX.xml  CornellBoxSphereMultiLight.xml  CornellBoxSphereVolume.xml  CornellBoxSphereVolume2.xml  GGX_Test.xml  GlassSphere.xml  MaterialEnvironment.xml  PBR.xml  SDF.xml  SampleScene.xml  Scene.xml  Suzanne.xml
src/: source.cu
src/Plugins/: CMakeLists.txt
src/Plugins/GammaMapping/: CMakeLists.txt  GammaMapping.cu
src/Plugins/MaterialGGX/: CMakeLists.txt  MaterialGGX.cu
src/Plugins/MaterialGlass/: CMakeLists.txt  MaterialGlass.cu
src/Plugins/MaterialLambert/: CMakeLists.txt  MaterialLambert.cu
src/Plugins/MaterialMirror/: CMakeLists.txt  MaterialMirror.cu
src/Plugins/MaterialPBR/: CMakeLists.txt  MaterialPBR.cu
src/Plugins/MaterialPhong/: CMakeLists.txt  MaterialPhong.cu
src/Plugins/ReinhardMapping/: CMakeLists.txt  ReinhardMapping.cu
src/Plugins/RendererSDF/: CMakeLists.txt  RendererSDF.cu
src/Plugins/RendererVolume/: CMakeLists.txt  RendererVolume.cu
src/Plugins/RendererWavefront/: CMakeLists.txt  RendererWavefront.cu
src/Plugins/SDFCube/: CMakeLists.txt  SDFCube.cu
src/Plugins/SDFDifference/: CMakeLists.txt  SDFDifference.cu
src/Plugins/SDFIntersection/: CMakeLists.txt  SDFIntersection.cu
src/Plugins/SDFSphere/: CMakeLists.txt  SDFSphere.cu
src/Plugins/SDFUnion/: CMakeLists.txt  SDFUnion.cu
src/SphereTracingGenerator/: source.cu
